# GTestSnippets

./: CMakeLists.txt
test/: CMakeLists.txt  calculator_test.cpp
